--- a/src/components/container/HeaderComponent/HeaderComponent.css
+++ b/src/components/container/HeaderComponent/HeaderComponent.css
@@ -1,22 +1,33 @@
 .current {
-    background-color: #341b39;
-    opacity: 0.8;
-    border-radius: 9px;
-    color: #fff;
-    width: 40%;
-    padding: 1rem;
-    text-align: center;
-    transition: all 0.75s;
-  }
-  .current__label{
-    text-transform: uppercase;
-    font-size: 1.8rem;
-    color: #ddd;
-    font-weight: bold;
-  }
-  
-  .current__score {
-    font-size: 2rem;
-    margin: 0;
-  }
-  
+  background-color: #341b39;
+  opacity: 0.8;
+  border-radius: 9px;
+  color: #fff;
+  width: 40%;
+  padding: 1rem;
+  text-align: center;
+  transition: all 0.75s;
+}
+.current__label {
+  text-transform: uppercase;
+  font-size: 1.8rem;
+  color: #ddd;
+  font-weight: bold;
+}
+
+.current__stats {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.current__score {
+  font-size: 1.8rem;
+  margin: 0;
+  font-weight: bold;
+}
+
+.current__index {
+  font-size: 1.6rem;
+  font-weight: bold;
+}
